--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    
+
+    <footer>
+        <p>Made by Ergo Oll for The Odin Project 2023</p>
+        <a href="https://github.com/ergooll/odin-tic-tac-toe.git">Source Code</a>
+    </footer>
 </body>
 </html>
