--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Macondo&family=Zeyada&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="main.css">
     <script src="main.js" defer></script>
     <title>Tic Tac Toe</title>
 </head>
 <body>
-
+    <header>
+        <h1>Tic Tac Toe</h1>
+    </header>
     <footer>
         <p>Made by Ergo Oll for The Odin Project 2023</p>
         <a href="https://github.com/ergooll/odin-tic-tac-toe.git">Source Code</a>
