Created basic page layout

--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
     <header>
         <h1>Tic Tac Toe</h1>
     </header>
+
+    <main>
+        <div class="gameboard">
+            <div id="square1" class="game-square"><p>X</p></div>
+            <div id="square2" class="game-square"><p>O</p></div>
+            <div id="square3" class="game-square"><p>X</p></div>
+            <div id="square4" class="game-square"><p>X</p></div>
+            <div id="square5" class="game-square"><p>O</p></div>
+            <div id="square6" class="game-square"><p>X</p></div>
+            <div id="square7" class="game-square"><p>O</p></div>
+            <div id="square8" class="game-square"><p>X</p></div>
+            <div id="square9" class="game-square"><p>O</p></div>
+        </div>
+    </main>
+
     <footer>
         <p>Made by Ergo Oll for The Odin Project 2023</p>
         <a href="https://github.com/ergooll/odin-tic-tac-toe.git">Source Code</a>
