--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
             <div id="square8" class="game-square"><p>X</p></div>
             <div id="square9" class="game-square"><p>O</p></div>
         </div>
+        <div class="player-info">
+            <input type="text" placeholder="Player 1">
+            <input type="text" placeholder="Player 2">
+            <button id="start-button">Start</button>
+        </div>
+        <div class="game-info"></div>
     </main>
 
     <footer>
